--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@ PORT=8080
 MONGODB_URI=mongodb://localhost:27017/pseudo-trading-bot
 API_KEY=
 API_URL=
+
+BITFINEX_API_KEY=APIKEY
+BITFINEX_API_SECRET=APISECRET
+
+BUDGET=50000
+PROFIT_PERCENTAGE=1.2
+TARGET_ASSET=BTC
+BASE_ASSET=USD
+COMPOUND=false
