--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     }
   },
   "dependencies": {
+    "bitfinex-api-node": "^3.0.1",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
@@ -38,6 +39,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
+    "ora": "^4.0.3",
     "path": "^0.12.7",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
